--- a/Morser/Info.plist
+++ b/Morser/Info.plist
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>Haptics</string>
+	</array>
+</dict>
 </plist>
